--- a/trunk/application/views/boards/reply.twig
+++ b/trunk/application/views/boards/reply.twig
@@ -133,7 +133,7 @@
 
 <div class="ui-widget-content" id="replyoverview">
 	<div style="text-align:center;">
-		<strong>{{LANG_TOPICREVIEW}}</strong>&nbsp;&bull;&nbsp;[<a href="#replyoverview" onClick="loadIframe('topicreview', '{{INDEX_PAGE}}/print/{{TID}}');"><img src="themes/{{THEME_NAME}}/images/reload.png" alt="{{LANG_RELOAD}}" /></a>]
+		<strong>{{LANG_TOPICREVIEW}}</strong>&nbsp;&bull;&nbsp;[<div class="board-common-icons reload" onClick="loadIframe('topicreview', '{{INDEX_PAGE}}/print/{{TID}}');" title="{LANG_RELOAD}}"></div>]
 	</div>
 	<iframe src="{{INDEX_PAGE}}/print/{{TID}}" width="100%" id="topicreview" style="border:0px;"></iframe>
 </div>
