--- a/trunk/application/views/master.twig
+++ b/trunk/application/views/master.twig
@@ -158,7 +158,9 @@
 
 <table border="0" class="table" cellspacing="1" cellpadding="3">
 <tr>
-	<td class="ui-widget-header" valign="top">{{IMG("themes/"~THEME_NAME~"/images/logo.gif")|raw}}</td>
+	<td class="ui-widget-header" valign="top">
+		<div class="board-common-icons logo"></div>
+	</td>
 </tr><tr>
 
 {# setup menu by group policy. #}
@@ -184,7 +186,7 @@
 	<td width="100%" class=" ui-corner-left ui-corner-right ui-widget-content centerText">{{LANG_POWERED}}: <a href="http://elite-board.us/" target="_blank">Elite Bulletin Board</a> &#169; 2006-2013</td>
 </tr>
 </table>
-<span style="float:right;">{{IMG("themes/"~THEME_NAME~"/images/fuelbyci.png")|raw}}</span>
+<div class="board-common-icons poweredbyci floatRight"></div>
 </div>
 </body>
 </html>
